# agent-skills

./: .gitignore  CLAUDE.md  README.md  cspell.config.yaml  skills-lock.json  uv-deps.skill
.claude/: settings.json
.claude-plugin/: marketplace.json
.github/: copilot-instructions.md
.spec28-transcripts/: opus-with-eval-1-security-changes.md  opus-with-eval-2-config-changes.md  opus-with-eval-3-new-dependency.md  opus-with-eval-4-novel-pattern.md  opus-with-eval-5-no-special-areas.md  opus-with-eval-6-idempotent-rerun.md  opus-with-eval-7-data-model-changes.md  opus-with-eval-8-concurrency-state.md  opus-without-eval-1-security-changes.md  opus-without-eval-2-config-changes.md  opus-without-eval-3-new-dependency.md  opus-without-eval-4-novel-pattern.md  opus-without-eval-5-no-special-areas.md  opus-without-eval-6-idempotent-rerun.md  opus-without-eval-7-data-model-changes.md  opus-without-eval-8-concurrency-state.md  sonnet-with-eval-1-security-changes.md  sonnet-with-eval-2-config-changes.md  sonnet-with-eval-3-new-dependency.md  sonnet-with-eval-4-novel-pattern.md  sonnet-with-eval-5-no-special-areas.md  sonnet-with-eval-6-idempotent-rerun.md  sonnet-with-eval-7-data-model-changes.md  sonnet-with-eval-8-concurrency-state.md  sonnet-without-eval-1-security-changes.md  sonnet-without-eval-2-config-changes.md  sonnet-without-eval-3-new-dependency.md  sonnet-without-eval-4-novel-pattern.md  sonnet-without-eval-5-no-special-areas.md  sonnet-without-eval-6-idempotent-rerun.md  (+2 more)
evals/uv-deps/fixtures/simple-project/: pyproject.toml  pyproject.toml.bak  uv.lock.bak
(+299 files in other folders)
